# toybox

./: .gitignore  .gitmodules  README.md  main.c  onegin.txt
industrial_sem3/circles/: App.cpp  App.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Component.hpp  Drawable.hpp  DrawableCircle.cpp  DrawableCircle.hpp  DrawableSquare.cpp  DrawableSquare.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  GUIManager.cpp  GUIWidget.hpp  Graphics.hpp  Makefile  PhysicalBound.hpp  PhysicalCircle.cpp  PhysicalCircle.hpp  PhysicalCircle2.hpp  PhysicalObject.cpp  PhysicalObject.hpp  PhysicalSystem.cpp  PhysicalSystem.hpp  PhysicalWorld.cpp  PhysicalWorld.hpp  Rect.cpp  Rect.hpp  RectangularWidget.cpp  RectangularWidget.hpp  RenderSystem.cpp  RenderSystem.hpp  SDLGraphics.cpp  SDLGraphics.hpp  SFMLGraphics.cpp  (+8 more)
industrial_sem3/circles/GUI/: Button.cpp  Button.hpp  GUIManager.hpp  GUIWidget.cpp  GUIWidget.hpp  RectangularWidget.hpp
industrial_sem3/circles/Physics/: PhysicalBound.hpp  PhysicalObject.cpp  PhysicalObject.hpp  PhysicalSystem.cpp
industrial_sem3/circles/Render/: Drawable.hpp  DrawableCircle.cpp  DrawableCircle.hpp  DrawableSquare.cpp  DrawableSquare.hpp  RenderSystem.cpp  RenderSystem.hpp
industrial_sem3/circles/SFML/: SFMLGraphics.cpp  SFMLGraphics.hpp
industrial_sem3/circles/src/: App.cpp  App.hpp  main.cpp
industrial_sem3/circles/src/GUI/: Button.cpp  Button.hpp  Chart.cpp  Chart.hpp  CirclesWidget.cpp  CirclesWidget.hpp  Controller.hpp  GUIManager.cpp  GUIManager.hpp  GUIWidget.cpp  GUIWidget.hpp  MouseManager.cpp  MouseManager.hpp  RectangularWidget.hpp
industrial_sem3/circles/src/GameFramework/: Component.hpp  Entity.cpp  Entity.hpp  GameFramework.cpp  GameFramework.hpp
industrial_sem3/circles/src/Math/: Rect.cpp  Rect.hpp
industrial_sem3/circles/src/Physics/: InertPhysicalCircle.hpp  PhysicalObject.cpp  PhysicalObject.hpp  PhysicalSystem.cpp
industrial_sem3/circles/src/Render/: Drawable.hpp  DrawableCircle.cpp  DrawableCircle.hpp  DrawableSquare.cpp  DrawableSquare.hpp  DrawableTriangle.cpp  DrawableTriangle.hpp  RenderSystem.cpp  RenderSystem.hpp
industrial_sem3/circles/src/SDL/: SDLGraphics.cpp  SDLGraphics.hpp
industrial_sem3/circles/src/SFML/: SFMLGraphics.cpp  SFMLGraphics.hpp
industrial_sem3/pain/: CMakeLists.txt  README.md  cmake_gen_debug.sh  cmake_gen_release.sh
industrial_sem3/pain/external_plugins/: README.md
industrial_sem3/pain/resources/: textures.idx
industrial_sem3/pain/src/: App.cpp  App.hpp  TextureManager.hpp
industrial_sem3/pain/src/BaseGUI/: AnimatedButton.cpp  AnimatedButton.hpp  BaseButton.cpp  Button.cpp  Button.hpp  ButtonBar.cpp  ButtonBar.hpp  Canvas.cpp  Canvas.hpp  GUIManager.cpp  GUIManager.hpp  Label.cpp  Label.hpp  MenuBar.cpp  PrettyButton.cpp  PrettyButton.hpp  Slider.cpp  Slider.hpp  SliderThumb.hpp  TextBox.cpp  TextBox.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
industrial_sem3/pain/src/Editor/: Canvas.cpp  Canvas.hpp  Effect.hpp  Plugin.cpp  Plugin.hpp  PluginManager.cpp  PluginManager.hpp  Tool.hpp  ToolKeeper.cpp  ToolKeeper.hpp
industrial_sem3/pain/src/EditorLogic/: ColorChangeDelegate.hpp  PaintController.cpp  PaintController.hpp  PaintControllerMenuDelegate.hpp
industrial_sem3/pain/src/EditorWidgets/: CanvasWidget.cpp  CanvasWidget.hpp  ImageOpenWindow.cpp  ImageOpenWindow.hpp  KeyColorPicker.cpp  KeyColorPicker.hpp  MainColorPicker.cpp  MainColorPicker.hpp  PaintMainWindow.cpp  PaintMainWindow.hpp  PaintWindow.cpp  PaintWindow.hpp  Pallete.cpp  Pallete.hpp  PalleteWindow.cpp  PalleteWindow.hpp  PluginChooseButton.cpp  PluginChooseButton.hpp  PluginConfigWindow.cpp  PluginConfigWindow.hpp  PluginPicker.cpp  PluginPicker.hpp  PluginPickerWindow.cpp  PluginPickerWindow.hpp  SizePicker.cpp  SizePicker.hpp  SizePickerWindow.cpp  SizePickerWindow.hpp  SplinePoint.cpp  SplinePoint.hpp  SplineWidget.cpp  SplineWidget.hpp  SplineWindow.cpp  SplineWindow.hpp  TextBoxDemoWindow.cpp  TextBoxDemoWindow.hpp  ToolPicker.cpp  ToolPicker.hpp  ToolPickerWindow.cpp  ToolPickerWindow.hpp
industrial_sem3/pain/src/GUIBase/: AnimatedButton.cpp  AnimatedButton.hpp  BaseButton.cpp  BaseButton.hpp  Button.cpp  Button.hpp  Canvas.cpp  Canvas.hpp  DragArea.cpp  DragArea.hpp  GUIManager.cpp  GUIManager.hpp  Label.cpp  Label.hpp  MenuBar.cpp  Slider.cpp  Slider.hpp  SliderThumb.cpp  SliderThumb.hpp  TextBox.cpp  TextBox.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
industrial_sem3/pain/src/GUIElements/: ColorPicker.cpp  ColorPicker.hpp  ColorPickerWindow.hpp  KeyColorPicker.cpp  KeyColorPicker.hpp  MainColorPicker.cpp  MainColorPicker.hpp  PaintWindow.cpp  PaintWindow.hpp  Pallete.cpp  Pallete.hpp  PalleteWindow.cpp  PalleteWindow.hpp  SizePicker.cpp  SizePicker.hpp  SizePickerWindow.cpp  SplinePoint.cpp  SplinePoint.hpp  SplineWidget.cpp  SplineWidget.hpp  SplineWindow.cpp  SplineWindow.hpp  TextBoxDemoWindow.cpp  TextBoxDemoWindow.hpp
industrial_sem3/pain/src/GUILogic/: ColorChangeDelegate.hpp  ColorPickerCloseDelegate.hpp  ColorPickerController.hpp  ColorPickerDelegate.hpp  KeyColorChangedDelegate.hpp  PaintController.cpp  PaintController.hpp  PaintControllerMenuDelegate.hpp  PaintWindowCloseDelegate.hpp  SizePickerCloseDelegate.hpp  SizePickerSliderDelegate.hpp  WindowCloseDelegate.hpp
industrial_sem3/pain/src/LGL/: Color.hpp  LGL.hpp  LGLCommon.cpp
industrial_sem3/pain/src/Utils/: CatmullRomSpline.cpp  CatmullRomSpline.hpp  Rect.hpp  Vec3.hpp
industrial_sem3/paint/: CMakeLists.txt  cmake_gen_debug.sh  cmake_gen_release.sh
industrial_sem3/paint/resources/: textures.idx
industrial_sem3/paint/src/: App.cpp  App.hpp  TextureManager.cpp
industrial_sem3/paint/src/GUI/: Button.cpp  Button.hpp  Controller.hpp  GUIManager.cpp  GUIManager.hpp  Label.hpp  MainWidget.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp  WindowBody.cpp  WindowBody.hpp  (+2 more)
industrial_sem4/sorting/: CMakeLists.txt  cmake_gen_debug.sh  cmake_gen_release.sh
industrial_sem4/sorting/src/: App.cpp  App.hpp  main.cpp
(+748 files in other folders)
